<resources>
    <string name="app_name">씨네마천국</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="story">군도, 백성을 구하라\n양반과 탐관오리들의 착취가 극에 달했던 조선 철종 13년. 힘 없는 백성의 편이 되어 세상을 바로잡고자 하는 의적떼인 군도, 지리산 추설이 있었다\n\n쌍칼 도치 vs 백성의 적 조윤\n잦은 자연재해, 기근과 관의 횡포까지 겹쳐 백성들의 삶이 날로 피폐해 져 가는 사이, 나주 대부호의 서자로 조선 최고의 무관 출신인 조윤은 극악한 수법으로 양만들을 수탈, 성남지방 최고의 대부호로 성장한다. 한편, 소 돼지를 잡아 근근이 살아가던 천한 백정 돌무치는 죽어도 잊지 못할 끔찍한 일을 당한 뒤 군도에 합류, 지리산 추설의 신 거성 도치로 거듭난다.\n\n뭉치면 백성, 흩어지면 도적!\n망할 세상을 뒤집기 위해, 백성이 주인인 새 세상을 향해 도치를 필두로 한 군도는 백성의 적, 조율과 한 판 승부를 시작하는데…</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comment_toolbar_title">한줄평 목록</string>
    <string name="movie_title">군도</string>
    <string name="movie_ratingscore">6.0</string>
    <string name="movie_commentnum">10</string>
    <string name="movie_oneline_evaluation">한줄평</string>
    <string name="movie_write">작성하기</string>
    <string name="movie_writehint">100자 이내로 작성해주세요.</string>
    <string name="movie_comment_save">저장</string>
    <string name="movie_comment_cancel">취소</string>
    <string name="movie_id">1</string>
    <string name="movie_share">61.6</string>
    <string name="movie_d_day">D-1</string>
    <string name="movie_detailbtn">상세보기</string>
    <string name="movie_open_date">2014.07.23</string>
    <string name="movie_genere">액션</string>
    <string name="movie_runningtime">137분</string>
    <string name="movie_like">15</string>
    <string name="movie_dislike">2</string>
    <string name="movie_rank">5</string>
    <string name="movie_accmulate">840000</string>
    <string name="movie_director">윤종빈</string>
    <string name="movie_actor">하정우(도치), 강동원(조윤)</string>
    <string name="movie_allview">모두 보기</string>
    <string name="movie_reserve">예매하기</string>


</resources>
