<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.comment_write.CommentWriteActivity">

    <data>

        <variable
            name="activity"
            type="com.example.boostcourseaceproject4.activity.comment_write.CommentWriteActivity" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorBlue">
            <TextView
                android:layout_marginLeft="8dp"
                android:id="@+id/commentwrite_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textStyle="bold"
                android:text="@string/movie_oneline_evaluation"
                android:textColor="@color/colorWhite"
                android:layout_marginStart="8dp" />
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layer_down_thin_border"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp">

            <TextView
                android:id="@+id/commentwrite_tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_title"
                android:textSize="25sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/commentwrite_iv_grade"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:src="@drawable/ic_15" />
        </LinearLayout>

        <RatingBar
            android:id="@+id/commentwrite_rb_rating"
            style="?android:attr/ratingBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:numStars="5"
            android:rating="5.0"
            android:stepSize="0.1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="평점을 입력해 주세요."
            android:textAlignment="center" />

        <EditText
            android:id="@+id/commentwrite_et_write"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:background="@drawable/shape_rectangle_orange_border"
            android:gravity="top"
            android:hint="@string/movie_writehint"
            android:maxLength="100"
            android:padding="15dp"
            android:privateImeOptions="defaultInputmode=korean"
            android:textCursorDrawable="@color/colorPrimaryDark"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_marginEnd="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal">

            <Button
                android:onClick="@{activity::onOkClick}"
                android:id="@+id/commentwrite_btn_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/layer_button_purple_thin_border"
                android:text="@string/movie_comment_save" />

            <Button
                android:onClick="@{activity::onCancelClick}"
                android:id="@+id/commentwrite_btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/layer_button_purple_thin_border"
                android:text="@string/movie_comment_cancel" />

        </LinearLayout>

    </LinearLayout>
</layout>